Open navigation links in same tab

--- a/index.html
+++ b/index.html
@@ -232,8 +232,8 @@
     <!-- Navegação -->
     <div class="nav">
         <a href="#mensal">📊 Análise Mensal Detalhada</a>
-        <a href="tabelas_modulacao.html" target="_blank">📋 Tabelas de Modulação por Mês</a>
-        <a href="comparacao_anos.html" target="_blank">📅 Comparação entre Anos</a>
+        <a href="tabelas_modulacao.html">📋 Tabelas de Modulação por Mês</a>
+        <a href="comparacao_anos.html">📅 Comparação entre Anos</a>
     </div>
 
     <!-- Plots Mensais -->
