--- a/comparacao_anos.html
+++ b/comparacao_anos.html
@@ -7,7 +7,7 @@
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             margin: 20px;
-            background: linear-gradient(135deg, #f093fb 0%, #f5576c 100%);
+            background: linear-gradient(135deg, #60AB56 0%, #AECC56 100%);
             min-height: 100vh;
         }
         .header {
