--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             margin: 20px;
-            background: linear-gradient(135deg, #2196F3 0%, #4CAF50 100%);
+            background: linear-gradient(135deg, #60AB56 0%, #AECC56 100%);
             min-height: 100vh;
         }
         .header {
