--- a/tabelas_modulacao.html
+++ b/tabelas_modulacao.html
@@ -8,7 +8,7 @@
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             margin: 0;
             padding: 20px;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #60AB56 0%, #AECC56 100%);
             min-height: 100vh;
         }
         .header {
